force-app/main/default/objects/Participant__c.object
<CustomObject>
    <label>Participant</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>