force-app/main/default/objects/Participant__c/fields/ChatId__c.field-meta.xml
<CustomField>
    <fullName>ChatId__c</fullName>
    <externalId>true</externalId>
    <label>Chat Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>