force-app/main/default/objects/Participant__c/fields/FlatNumber__c.field-meta.xml
<CustomField>
    <fullName>FlatNumber__c</fullName>
    <label>Flat Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>