force-app/main/default/objects/Participant__c/fields/IsAdmin__c.field-meta.xml
<CustomField>
    <fullName>IsAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Admin</label>
    <type>Checkbox</type>
</CustomField>