force-app/main/default/objects/Participant__c/fields/SubscribedToBlackoutStartWarning__c.field-meta.xml
<CustomField>
    <fullName>SubscribedToBlackoutStartWarning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribed To Blackout Start Warning</label>
    <type>Checkbox</type>
</CustomField>