force-app/main/default/objects/Participant__c/fields/TelegramId__c.field-meta.xml
<CustomField>
    <fullName>TelegramId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Telegram Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>