force-app/main/default/objects/Participant__c/fields/TelegramUsername__c.field-meta.xml
<CustomField>
    <fullName>TelegramUsername__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Telegram Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>