force-app/main/default/objects/Participant__c/fields/UserNumber__c.field-meta.xml
<CustomField>
    <fullName>UserNumber__c</fullName>
    <label>User Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>