force-app/main/default/objects/Participant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FlatNumber__c</columns>
    <columns>UserNumber__c</columns>
    <columns>TelegramUsername__c</columns>
    <columns>LastName__c</columns>
    <columns>TelegramId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>